syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/the-medo/talebound-backend/pb";

message DataPost {
  int32 id = 1;
  int32 postTypeId = 2;
  int32 userId = 3;
  string title = 4;
  string content = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp deletedAt = 7;
  google.protobuf.Timestamp lastUpdatedAt = 8;
  int32 lastUpdatedUserId = 9;
  bool isDraft = 10;
  bool isPrivate = 11;
}

message DataPostType {
  int32 id = 1;
  string name = 2;
  bool draftable = 3;
  bool privatable = 4;
}

message DataHistoryPost {
  int32 id = 1;
  int32 postId = 2;
  int32 postTypeId = 3;
  int32 userId = 4;
  string title = 5;
  string content = 6;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp deletedAt = 8;
  google.protobuf.Timestamp lastUpdatedAt = 9;
  int32 lastUpdatedUserId = 10;
  bool isDraft = 11;
  bool isPrivate = 12;
  string postTypeName = 13;
  bool postTypeDraftable = 14;
  bool postTypePrivatable = 15;
}

message Post {
  DataPost post = 1;
  DataPostType postType = 2;
}

message HistoryPost {
  DataHistoryPost post = 1;
  DataPostType postType = 2;
}

